2007-12-11 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97_grammar.h
	(vrml97_parse_error_msg(vrml_parse_error)): Don't overload
	operator<< for vrml_parse_error because additions to the
	enumeration will need to be handled elsewhere.

2007-12-11 Braden McDaniel  <braden@endoframe.com>

	Removed unnecessary typedefs associated with
	boost::spirit::multi_pass usage.

	* examples/pretty_print.cpp
	(main(int, char *[])): Removed unnecessary typedefs.

2007-12-11 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97_grammar.h: Cleaned up
	unnecessary header inclusions.

2007-12-11 Braden McDaniel  <braden@endoframe.com>

	Changed openvrml::null_vrml_parse_actions to
	openvrml::null_vrml97_parse_actions.

	* examples/pretty_print.cpp
	* src/libopenvrml/openvrml/vrml97_grammar.h
	* src/libopenvrml/openvrml/x3d_vrml_grammar.h

2007-12-11 Braden McDaniel  <braden@endoframe.com>

	Removed unnecessary typedefs associated with
	boost::spirit::multi_pass usage.

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::browser::parse_vrml(std::istream &, const std::string&,
	const std::string &, const openvrml::scene &,
	std::vector<boost::intrusive_ptr<openvrml::node> > &,
	std::map<std::string, std::string> &)): Removed unnecessary
	typedefs.
	* tests/parse_vrml97.cpp
	(main(int, char *[])): Removed unnecessary typedefs.
	* tests/parse_x3dvrml.cpp
	(main(int, char *[])): Removed unnecessary typedefs.

2007-12-10 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/bounding_volume.cpp
	(openvrml::bounding_sphere::bounding_sphere()): Initialize center_
	with a default vec3f.

2007-12-09 Braden McDaniel  <braden@endoframe.com>

	Quelled some compiler warnings.

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(openvrml::gl::viewer::do_insert_shell(unsigned int, const
	std::vector<vec3f> &, const std::vector<int32> &, const
	std::vector<color> &, const std::vector<int32> &, const